@@ -1,3 +1,11 @@
+2007-11-23 00:13 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/MeshOEMMViewer3d.java: Updated, DecimateHalfEdge
+	has been renamed into QEMDecimateHalfEdge.
+	* src/org/jcae/mesh/MeshOEMMViewer3d.java
+	  src/org/jcae/mesh/MeshBoraViewer3d.java: Updated,
+	MeshWriter.writeObject3D() signature has been modified.
+
 2007-11-11 00:13 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/viewer3d/OEMMBehavior.java
